# datefixR

./: .Rbuildignore  .gitignore  CITATION.cff  CRAN-SUBMISSION  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  RUST_OPTIMIZATIONS.md  _pkgdown.yml  app.R  codecov.yml  codemeta.json  cran-comments.md  datefixR.Rproj  small_benchmark.R
.github/: CONTRIBUTING.md
.github/workflows/: R-CMD-check.yaml  deploy-shiny.yaml  hello-to-new-contributions.yml  pkgdown.yaml  pr-commands.yaml  update-citation-cff.yaml  update-docs.yaml
R/: RcppExports.R  data.R  datefixR-package.R  extendr-wrappers.R  fix_date.R  fix_date_char.R  fix_date_df.R  fix_dates.R  internal.R  months.R  shinyapp.R  zzz.R
data/: exampledates.rda
inst/: CITATION  WORDLIST
man/: datefixR-package.Rd  datefixR.Rd  exampledates.Rd  fix_date.Rd  fix_date_app.Rd  fix_date_char.Rd  fix_date_df.Rd  fix_dates.Rd
pkgdown/: example.R
po/: LINGUAS  R-cs.po  R-datefixR.pot  R-de.po  R-es.po  R-fr.po  R-id.po  R-pt.po  R-ru.po  R-sk.po  cs.po  datefixR.pot  de.po  es.po  fr.po  id.po  ru.po  sk.po
src/: Makevars.in  Makevars.win.in  RcppExports.cpp  code.cpp  datefixR-win.def  entrypoint.c  libintl.h  symbols.rds  translate.h
src/.cargo/: .global-cache
src/rust/: .gitignore  Cargo.toml  Cargo.toml.backup  vendor.tar.xz
src/rust/src/: lib.rs  optimizations.rs  translations.rs
tests/: test_zz.R  testthat.R
tests/testthat/: test-app.R  test_app_1.R  test_fix_date.R  test_fix_date_app.R  test_fix_date_char.R  (+5 more)
tools/: config.R
vignettes/: datefixR.Rmd  internationalization.Rmd  shiny_app.Rmd
(+43 files in other folders)
