[package]
name = 'datefixR'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib', 'rlib' ]
name = 'datefixR'

[dependencies]
extendr-api = { version = "0.8.1", default-features = false, features = ["result_condition"] }
regex = "1.11"
chrono = "0.4"
lazy_static = "1.5"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

# Specific profile for WASM builds
[profile.release.package."*"]
opt-level = "s"
