[package]
name = 'datefixR'
publish = false
version = '0.1.1'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib', 'rlib' ]
name = 'datefixR'

[dependencies]
extendr-api = { version = "0.9.0", default-features = false, features = ["result_condition"] }
regex = "1.12.3"
chrono = "0.4.44"
lazy_static = "1.5"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

# Specific profile for WASM builds
[profile.release.package."*"]
opt-level = "s"
